feat: add deployment baseline and app updates